--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: circle/openjdk:11-jdk
+      - image: cimg/openjdk:11.0
     steps:
       - checkout
       - run:
@@ -10,7 +10,7 @@ jobs:
           command: mvn clean install
   test:
     docker:
-      - image: circleci/openjdk:11-jdk
+      - image: cimg/openjdk:11.0
     steps:
       - checkout
       - run:
