--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,8 @@
 version: 2.1
+
+orbs:
+  codecov: codecov/codecov@4.0.1
+
 jobs:
   build:
     docker:
@@ -16,9 +20,14 @@ jobs:
       - run:
           name: Run tests with Maven
           command: mvn test
+      - codecov/upload:
+          file: target/site/jacoco/jacoco.xml
+
 workflows:
   version: 2
   build_and_test:
     jobs:
       - build
-      - test
+      - test:
+          requires:
+            - build
