--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,14 @@
     <version>1.0-SNAPSHOT</version>
     <name>java-project</name>
     <url>http://www.univ-avignon.fr</url>
+
+    <properties>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
+
     <build>
         <plugins>
             <plugin>
