--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,12 +35,14 @@ jobs:
 
 workflows:
   version: 2
+
   build_and_test:
     jobs:
       - build
-      - checkstyle:
-          requires:
-            - build
       - test:
           requires:
-            - checkstyle
+            - build
+
+  checkstyle_workflow:
+    jobs:
+      - checkstyle
