"config de checkstyle"

--- a/pom.xml
+++ b/pom.xml
@@ -64,16 +64,19 @@
                     <encoding>UTF-8</encoding>
                     <consoleOutput>true</consoleOutput>
                     <failsOnError>true</failsOnError>
+                    <outputFile>target/site/checkstyle-result.xml</outputFile>
                 </configuration>
                 <executions>
                     <execution>
                         <phase>validate</phase>
                         <goals>
                             <goal>check</goal>
+                            <goal>checkstyle-report</goal>
                         </goals>
                     </execution>
                 </executions>
             </plugin>
+
         </plugins>
     </build>
     <dependencies>
