--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,8 @@
                     <encoding>UTF-8</encoding>
                     <consoleOutput>true</consoleOutput>
                     <failsOnError>true</failsOnError>
+                    <outputFile>target/site/checkstyle-result.xml</outputFile>
+                    <reportOutputFile>target/site/checkstyle-result.html</reportOutputFile>
                 </configuration>
                 <executions>
                     <execution>
