"config de checkstyle"

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,6 +32,17 @@ jobs:
       - store_artifacts:
           path: checkstyle-status.json
           destination: checkstyle-status
+      - run:
+          name: Commit Checkstyle Status JSON to GitHub Pages
+          command: |
+            git config --global user.name "circleci[bot]"
+            git config --global user.email "circleci[bot]@users.noreply.github.com"
+            git remote set-url origin https://x-access-token:${GH_TOKEN}@github.com/${CIRCLE_PROJECT_USERNAME}/${CIRCLE_PROJECT_REPONAME}.git
+            git checkout gh-pages
+            git add checkstyle-status.json
+            git commit -m "Update Checkstyle status"
+            git push origin gh-pages
+
 
   test:
     docker:
