--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,17 +37,10 @@ jobs:
           command: |
             git config --global user.name "circleci[bot]"
             git config --global user.email "circleci[bot]@users.noreply.github.com"
-            git remote set-url origin https://x-access-token:${GH_TOKEN}@github.com/${CIRCLE_PROJECT_USERNAME}/${CIRCLE_PROJECT_REPONAME}.git
-
-           
-            git fetch origin gh-pages || git checkout --orphan gh-pages
-            git rm -rf .  # Supprime les fichiers existants dans la branche gh-pages
-
-          
+            git checkout gh-pages
             git add checkstyle-status.json
             git commit -m "Update Checkstyle status"
             git push origin gh-pages
-
 
   test:
     docker:
