--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,8 +37,13 @@ jobs:
           command: |
             git config --global user.name "circleci[bot]"
             git config --global user.email "circleci[bot]@users.noreply.github.com"
-            git remote set-url origin https://x-access-token:${GH_TOKEN}@github.com/${CIRCLE_PROJECT_USERNAME}/${CIRCLE_PROJECT_REPONAME}.git
-            git checkout gh-pages
+            
+            
+            git add checkstyle-status.json
+            git commit -m "Add Checkstyle status file"
+            
+            
+            git checkout gh-pages || git checkout --orphan gh-pages
             git add checkstyle-status.json
             git commit -m "Update Checkstyle status"
             git push origin gh-pages
