--- a/.github/workflows/checkstyle.yml
+++ b/.github/workflows/checkstyle.yml
@@ -1,38 +1,38 @@
-name: Checkstyle and Badge
+name: Checkstyle
 
 on:
   push:
     branches:
-      - main  # Trigger on push to main branch
+      - main
   pull_request:
     branches:
-      - main  # Trigger on pull request to main branch
+      - main
 
 jobs:
   checkstyle:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout the repository
+
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # Step 2: Set up JDK 11
+
       - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
           java-version: '11'
           distribution: 'temurin'
 
-      # Step 3: Build with Maven
+
       - name: Build with Maven
         run: mvn clean install
 
-      # Step 4: Run Checkstyle
+
       - name: Run Checkstyle
         run: mvn checkstyle:check
 
-      # Step 5: Generate Checkstyle Badge (Custom Command)
+
       - name: Generate Checkstyle Badge
         run: |
           if grep -q "<error" target/site/checkstyle-result.xml; then
@@ -41,13 +41,13 @@ jobs:
             echo "Checkstyle: Passed" > checkstyle-badge.txt
           fi
 
-      # Step 6: Commit the Checkstyle Badge to GitHub Pages (gh-pages branch)
+
       - name: Commit Checkstyle Badge to GitHub Pages
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git remote set-url origin https://x-access-token:${{ secrets.GH_TOKEN }}@github.com/${{ github.repository }}.git
           git checkout gh-pages || git checkout --orphan gh-pages
-          git add checkstyle-badge.txt
+          git add checkstyle-status.json
           git commit -m "Update Checkstyle status"
           git push origin gh-pages
