--- a/.github/workflows/checkstyle.yml
+++ b/.github/workflows/checkstyle.yml
@@ -10,36 +10,23 @@ on:
 
 jobs:
   checkstyle:
-    runs-on: ubuntu-latest
-
+    docker:
+      - image: cimg/openjdk:11.0
     steps:
-
       - name: Checkout code
         uses: actions/checkout@v3
 
-
-      - name: Set up JDK 11
-        uses: actions/setup-java@v3
-        with:
-          java-version: '11'
-          distribution: 'temurin'
-
-
-      - name: Build with Maven
-        run: mvn clean install
-
-
-      - name: Run Checkstyle
-        run: mvn checkstyle:check
-
-
-      - name: Generate Checkstyle Badge
-        run: |
-          if grep -q "<error" target/site/checkstyle-result.xml; then
-            echo "Checkstyle: Failed" > checkstyle-badge.json
-          else
-            echo "Checkstyle: Passed" > checkstyle-badge.json
-          fi
+      - run:
+            name: Run Checkstyle
+            command: mvn checkstyle:check
+      - run:
+            name: Generate Checkstyle Status JSON
+            command: |
+              if grep -q "<error" target/site/checkstyle-result.xml; then
+                echo '{"status": "échoué"}' > checkstyle-status.json
+              else
+                echo '{"status": "réussi"}' > checkstyle-status.json
+              fi
 
 
       - name: Display Checkstyle Status JSON
