--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,15 +33,20 @@ jobs:
           path: checkstyle-status.json
           destination: checkstyle-status
       - run:
+          name: Remove all files from gh-pages branch
+          command: |
+            # Change to gh-pages branch
+            git checkout --orphan gh-pages
+            git rm -rf .  # Remove all files from gh-pages branch
+            git commit -m "Remove all files from gh-pages"
+            git push origin gh-pages --force  # Force push the empty state to gh-pages
+      - run:
           name: Commit Checkstyle Status JSON to GitHub Pages
           command: |
-            git config --global user.name "circleci[bot]"
-            git config --global user.email "circleci[bot]@users.noreply.github.com"
             git checkout gh-pages
-            git status  
-            git add checkstyle-status.json  
+            git add checkstyle-status.json  # Add only the checkstyle-status.json
             git commit -m "Update Checkstyle status"
-            git push origin gh-pages
+            git push origin gh-pages  # Push the updated file to gh-pages
 
   test:
     docker:
