--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,21 +32,28 @@ jobs:
       - store_artifacts:
           path: checkstyle-status.json
           destination: checkstyle-status
+
+      # Configuration de l'utilisateur Git
       - run:
-          name: Remove all files from gh-pages branch
+          name: Set Git user info for CircleCI
           command: |
-            # Change to gh-pages branch
+            git config --global user.name "circleci[bot]"
+            git config --global user.email "circleci[bot]@users.noreply.github.com"  # Définir l'email de GitHub Actions
+
+      # Suppression du contenu de la branche gh-pages et ajout de checkstyle-status.json
+      - run:
+          name: Clear gh-pages branch and add Checkstyle Status
+          command: |
+            # Crée un commit "orphelin" pour nettoyer la branche gh-pages
             git checkout --orphan gh-pages
-            git rm -rf .  # Remove all files from gh-pages branch
-            git commit -m "Remove all files from gh-pages"
-            git push origin gh-pages --force  # Force push the empty state to gh-pages
-      - run:
-          name: Commit Checkstyle Status JSON to GitHub Pages
-          command: |
-            git checkout gh-pages
-            git add checkstyle-status.json  # Add only the checkstyle-status.json
-            git commit -m "Update Checkstyle status"
-            git push origin gh-pages  # Push the updated file to gh-pages
+            git rm -rf .  # Supprime tous les fichiers de la branche gh-pages
+            git commit -m "Clear gh-pages"  # Commit pour effacer tout le contenu
+            git push origin gh-pages --force  # Force le push sur gh-pages pour le vider
+
+            # Ajoute checkstyle-status.json à gh-pages
+            git add checkstyle-status.json
+            git commit -m "Add Checkstyle status"
+            git push origin gh-pages  # Push checkstyle-status.json sur gh-pages
 
   test:
     docker:
