"config de checkstyle"

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,18 +35,17 @@ jobs:
 
 
       - run:
-        name: Set Git user info for CircleCI
-        environment:
-          GH_TOKEN: $GH_TOKEN
+          name: Commit Checkstyle Status to gh-pages
           command: |
             git config --global user.name "circleci[bot]"
             git config --global user.email "circleci[bot]@users.noreply.github.com"
             git remote set-url origin https://x-access-token:$GH_TOKEN@github.com/$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME.git
             git checkout gh-pages || git checkout --orphan gh-pages
-            git rm -rf .  
+            git rm -rf .
             git add checkstyle-status.json
             git commit -m "Add Checkstyle status"
-            git push origin gh-pages  
+            git push origin gh-pages
+  
 
   test:
     docker:
